Add the configuration on Ubuntu18 X299 dual TITAN RTX